apps/world-cup-ladder/base/ingress-patch.yaml
# apps/world-cup-ladder/base/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: world-cup-ladder
spec:
  rules:
    - host: worldcupladder.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: world-cup-ladder
                port:
                  name: http
